# JetBrainsBevy

./: Cargo.toml
ex01_hello_bevy/: Cargo.toml
ex01_hello_bevy/src/: main.rs
ex02_moving_crab/: Cargo.toml
ex02_moving_crab/src/: main.rs
ex03_crab_stars/: Cargo.toml
ex03_crab_stars/src/: main.rs
ex04_physics/: Cargo.toml
ex04_physics/src/: main.rs
ex05_particles/: Cargo.toml
ex05_particles/src/: main.rs
ex06_3d/: Cargo.toml
ex06_3d/src/: main.rs
